--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	<div id="wrapper">
-		<header><h1>Emily's Photogrphy</h1></header>
+		<header><h1>Emily's Photography</h1></header>
 	<nav>
 		<ul>
 	<li><a href="index.html">Home</a></li>
