--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 	<li><a href="about.html">About</a></li>
 	<li><a href="booking.html">Booking</a></li>
 		</ul> </nav>
-	<article class="left"><img src="familypic.JPEG" alt="family" style="width: 400px;height: 500px;"></article>
-	<articles class="right"><p>Family photoshoots available &#128512 </p>
+	<article class="right"><img src="familypic.JPEG" alt="family" style="width: 400px;height: 500px;"></article>
+	<articles class="left"><p>Family photoshoots available &#128512 </p>
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, autem tempora ipsam doloremque, dignissimos excepturi ipsum iusto placeat assumenda atque!</p></articles>
 		<footer>Copyright 2021 Emily's Photos ™</footer>
 		
